[package]
name = "vlinix"
version = "0.1.0"
authors = ["Vincent Lin <vincentlin1617@gmail.com>"]
edition = "2024"

[dependencies]

# the profile used for `cargo build`
[profile.dev] 
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort"

[[bin]]
name = "vlinix"
test = false
bench = false